cabal-version:      3.0
name:               ft-game
version:            0.1.0.0
synopsis:           Final Tagless Tutorial game
homepage:           https://github.com/isaac025/ft-game
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Game
build-type:         Simple
extra-doc-files:    README.md

executable ft-game
    ghc-options:      -Wall
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , transformers
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010
